fuchsia: Make new ProcessTest tests work

Bug: 767082
Change-Id: Ie65dcb11212294e85c561d0788ece25ec776dcc7
Reviewed-on: https://chromium-review.googlesource.com/678098
Reviewed-by: Zijie He <zijiehe@chromium.org>
Commit-Queue: Scott Graham <scottmg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#503888}
Former-commit-id: 62ddfd4155c834c257471d0586f30faf8dabab2c